--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - database
 
   database:
-    image: postgres:51
+    image: nonameimage
     container_name: database
     env_file:
       - .env_example
