--- a/.env_example
+++ b/.env_example
@@ -1,4 +1,4 @@
-DATABASE_URL=postgresql+asyncpg://myuser:mypassword@database:5432/mydatabase
-POSTGRES_USER=myuser
-POSTGRES_PASSWORD=mypassword
-POSTGRES_DB=mydatabase
+POSTGRES_USER=user
+POSTGRES_PASSWORD=password
+POSTGRES_DB=testdb
+DATABASE_URL=postgres://user:password@database:5432/testdb
