--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,10 @@ typing_extensions==4.12.2
 uvicorn==0.34.0
 Flask
 psycopg2-binary
+numpy==1.24.0          # Библиотека для работы с многомерными массивами и матрицами
+pandas==2.0.0         # Библиотека для анализа данных
+scikit-learn==1.2.0   # Библиотека для машинного обучения
+tensorflow==2.12.0    # Библиотека для глубокого обучения
+torch==2.0.0          # Библиотека для машинного обучения и глубокого обучения
+opencv-python==4.6.0   # Библиотека для компьютерного зрения
+matplotlib==3.7.0      # Библиотека для визуализации данных
