--- a/requirements.txt
+++ b/requirements.txt
@@ -24,5 +24,28 @@ pandas==2.0.0
 scikit-learn==1.2.0
 tensorflow==2.12.0
 torch==2.0.0
-opencv-python==4.6.0
 matplotlib==3.7.0
+xgboost==1.7.5
+lightgbm==3.3.2
+keras==2.12.0
+nltk==3.8.1
+spacy==3.4.0
+gym==0.26.2
+beautifulsoup4==4.12.0
+requests==2.28.1
+flask==2.2.2
+django==4.1.2
+fastapi==0.95.0
+sqlalchemy==1.4.41
+pydantic==1.10.2
+pytest==7.2.0
+jupyterlab==3.5.1
+seaborn==0.12.2
+plotly==5.11.0
+statsmodels==0.13.5
+pyarrow==8.0.0
+dask==2022.10.1
+pillow==9.3.0
+tqdm==4.64.1
+joblib==1.2.0
+imageio==2.19.3
