--- a/requirements.txt
+++ b/requirements.txt
@@ -1,51 +1,48 @@
-annotated-types==0.7.0
-anyio==4.7.0
-async-timeout==5.0.1
-asyncpg==0.30.0
-click==8.1.8
-exceptiongroup==1.2.2
-fastapi==0.115.6
-greenlet==3.1.1
-h11==0.14.0
-idna==3.10
-pydantic==2.10.4
-pydantic-settings==2.7.0
-pydantic_core==2.27.2
-python-dotenv==1.0.1
-sniffio==1.3.1
-SQLAlchemy==2.0.36
-starlette==0.41.3
-typing_extensions==4.12.2
-uvicorn==0.34.0
+annotated-types
+anyio
+async-timeout
+asyncpg
+click
+exceptiongroup
+fastapi
+greenlet
+h11
+idna
+pydantic
+pydantic-settings
+pydantic_core
+python-dotenv
+sniffio
+SQLAlchemy
+starlette
+typing_extensions
+uvicorn
 Flask
 psycopg2-binary
-numpy==1.24.0
-pandas==2.0.0
-scikit-learn==1.2.0
-tensorflow==2.12.0
-torch==2.0.0
-matplotlib==3.7.0
-xgboost==1.7.5
-lightgbm==3.3.2
-keras==2.12.0
-nltk==3.8.1
-spacy==3.4.0
-gym==0.26.2
-beautifulsoup4==4.12.0
-requests==2.28.1
-flask==2.2.2
-django==4.1.2
-fastapi==0.95.0
-sqlalchemy==1.4.41
-pydantic==1.10.2
-pytest==7.2.0
-jupyterlab==3.5.1
-seaborn==0.12.2
-plotly==5.11.0
-statsmodels==0.13.5
-pyarrow==8.0.0
-dask==2022.10.1
-pillow==9.3.0
-tqdm==4.64.1
-joblib==1.2.0
-imageio==2.19.3
+numpy
+pandas
+scikit-learn
+tensorflow
+torch
+matplotlib
+xgboost
+lightgbm
+keras
+nltk
+spacy
+gym
+beautifulsoup4
+requests
+flask
+django
+pytest
+jupyterlab
+seaborn
+plotly
+statsmodels
+pyarrow
+dask
+pillow
+tqdm
+joblib
+imageio
